Add transform dialect building blocks for dispatch region formation
This commit adds two new transform dialect ops:
* WrapInDispatchRegionOp: Warp an arbitrary op in a new
  `dispatch.region` op.
* ClonePrecedingOpIntoDispatchRegionOp: Clone a preceding op into an
  existing `dispatch.region` op.

These ops will be used to build heuristics for dispatch region
formation.

The implementation of both ops is purpusely inside of static functions,
such the rewrite logic could be called from C++ without using the
transform dialect, if necessary.

--- a/compiler/src/iree/compiler/Dialect/Flow/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Flow/Transforms/test/CMakeLists.txt
@@ -41,6 +41,7 @@ iree_lit_test_suite(
     "region_to_workgroups.mlir"
     "strip_and_splat_constant_variables.mlir"
     "strip_signedness.mlir"
+    "transform_dispatch_region_formation.mlir"
     "transformation_pipeline.mlir"
     "verify_input_ir.mlir"
   TOOLS
