Add transform dialect building blocks for dispatch region formation
This commit adds two new transform dialect ops:
* WrapInDispatchRegionOp: Warp an arbitrary op in a new
  `dispatch.region` op.
* MoveIntoDispatchRegionOp: Move an op into an existing `dispatch.region`
  op.

These ops will be used to build heuristics for dispatch region
formation. To be able to express the current heuristic in
DispatchLinalgOnTensors.cpp, it is important that both producers and
consumers can be moved (fused) into a `dispatch.region` op.

The implementation of both ops is purpusely inside of static functions,
such the rewrite logic could be called from C++ without using the
transform dialect, if necessary. (Nevertheless, the transform dialect
makes it easy to test the functionality indepently.)

--- a/compiler/src/iree/compiler/Dialect/Flow/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Flow/Transforms/test/CMakeLists.txt
@@ -40,6 +40,7 @@ iree_lit_test_suite(
     "pad_tensor_to_tensor.mlir"
     "strip_and_splat_constant_variables.mlir"
     "strip_signedness.mlir"
+    "transform_dispatch_region_formation.mlir"
     "transformation_pipeline.mlir"
     "verify_input_ir.mlir"
   TOOLS
