--- a/compiler/src/iree/compiler/Dialect/Flow/Transforms/BUILD
+++ b/compiler/src/iree/compiler/Dialect/Flow/Transforms/BUILD
@@ -43,7 +43,7 @@ iree_compiler_cc_library(
         "DeduplicateExecutables.cpp",
         "DetachElementwiseFromNamedOps.cpp",
         "DispatchLinalgOnTensors.cpp",
-        "DispatchLinalgOnTensorsViaRegionOps.cpp",
+        "DispatchRegionHeuristic.cpp",
         "DispatchWithTransformDialect.cpp",
         "DumpDispatchGraph.cpp",
         "ExpandTensorShapes.cpp",
@@ -69,7 +69,7 @@ iree_compiler_cc_library(
     ],
     hdrs = [
         "ConvertRegionToWorkgroups.h",
-        "DispatchLinalgOnTensors.h",
+        "DispatchRegionHeuristic.h",
         "Passes.h",
         "Passes.h.inc",
         "RegionOpUtils.h",
