--- a/compiler/src/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
@@ -24,7 +24,7 @@ iree_cc_library(
     Transforms
   HDRS
     "ConvertRegionToWorkgroups.h"
-    "DispatchLinalgOnTensors.h"
+    "DispatchRegionHeuristic.h"
     "Passes.h"
     "Passes.h.inc"
     "RegionOpUtils.h"
@@ -40,7 +40,7 @@ iree_cc_library(
     "DeduplicateExecutables.cpp"
     "DetachElementwiseFromNamedOps.cpp"
     "DispatchLinalgOnTensors.cpp"
-    "DispatchLinalgOnTensorsViaRegionOps.cpp"
+    "DispatchRegionHeuristic.cpp"
     "DispatchWithTransformDialect.cpp"
     "DumpDispatchGraph.cpp"
     "ExpandTensorShapes.cpp"
