dispatch-on-tensors-via-region-ops: Generate tensor.update ops
This is an improvement to DispatchLinalgOnTensorsViaRegionOps.cpp:
Certain tensor.insert_slice ops are lowered to flow.tensor.update ops.
(Same as DispatchLinalgOnTensors.cpp.)

This is in preparation of #10719.

--- a/compiler/src/iree/compiler/Dialect/Flow/Conversion/TensorToFlow/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Flow/Conversion/TensorToFlow/CMakeLists.txt
@@ -15,8 +15,10 @@ iree_cc_library(
     TensorToFlow
   HDRS
     "Patterns.h"
+    "Utils.h"
   SRCS
     "Patterns.cpp"
+    "Utils.cpp"
   DEPS
     MLIRArithDialect
     MLIRFuncDialect
