Split iree.bufferize_op and cherry-pick linalg patterns
This change includes #11495, which was dropped at some point.

--- a/compiler/src/iree/compiler/Codegen/Common/TransformExtensions/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/TransformExtensions/CMakeLists.txt
@@ -52,6 +52,7 @@ iree_cc_library(
     MLIRPass
     MLIRSCFDialect
     MLIRTensorDialect
+    MLIRTensorTransforms
     MLIRTransformDialect
     MLIRTransforms
     iree::compiler::Codegen::Common::CommonPasses
